# seolkathon

./: README.md  bento.py  bentofile.yaml  docker-compose.yml
app/: .dockerignore  Dockerfile  README.md  app.py  app_iris.py  cmd.sh  main.py  pyproject.toml  setup.sh
model/: .dockerignore  Dockerfile  pyproject.toml
model/genterate/: README.md  bentofile.yaml  service.py  setup.sh  test.py  transformer.py
model/iris/: bentofile.yaml  train.py
model/summarize/: README.md  service.py
model/summerize/: service.py  test.py  transformer.py
