[tool.poetry]
name = "bento"
version = "0.1.0"
description = ""
authors = ["taekkim <taekkim@student.42seoul.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
bentoml = "1.0.0.a3"
transformers = "^4.16.1"
torch = "^1.10.2"
flax = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
